--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -7,11 +7,13 @@
 # Targets
 #
 all: seedtool.exe tcl2c.exe opp_replace.exe
-	copy opp_nmakemake.bat $(OMNETPP_BIN_DIR:/=\)
-	copy opp_makedep.bat $(OMNETPP_BIN_DIR:/=\)
-	copy opp_test.bat $(OMNETPP_BIN_DIR:/=\)
+	copy opp_nmakemake.cmd $(OMNETPP_BIN_DIR:/=\)
 	copy opp_nmakemake $(OMNETPP_BIN_DIR:/=\)
+	copy opp_makedep.cmd $(OMNETPP_BIN_DIR:/=\)
 	copy opp_makedep $(OMNETPP_BIN_DIR:/=\)
+	copy splitvec.cmd $(OMNETPP_BIN_DIR:/=\)
+	copy splitvec $(OMNETPP_BIN_DIR:/=\)
+	copy opp_test.cmd $(OMNETPP_BIN_DIR:/=\)
 	copy opp_test $(OMNETPP_BIN_DIR:/=\)
 	copy opp_neddoc.cmd $(OMNETPP_BIN_DIR:/=\)
 	copy opp_neddocall.cmd $(OMNETPP_BIN_DIR:/=\)
