--- a/samples/dyna2/dyna2.mak.in
+++ b/samples/dyna2/dyna2.mak.in
@@ -437,7 +437,7 @@ InputPath=.\dynapk.ned
 ".\dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
 	<<tempfile.bat
 	@echo off
-	perl @OMNETPP_BIN_DIR@\msgc -s _m.cpp dynapk.ned
+	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
 <<
 
 
@@ -448,7 +448,7 @@ InputPath=.\dynapk.ned
 ".\dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
 	<<tempfile.bat
 	@echo off
-	perl @OMNETPP_BIN_DIR@\msgc -s _m.cpp dynapk.ned
+	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
 <<
 
 
@@ -459,7 +459,7 @@ InputPath=.\dynapk.ned
 ".\dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
 	<<tempfile.bat
 	@echo off
-	perl @OMNETPP_BIN_DIR@\msgc -s _m.cpp dynapk.ned
+	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
 <<
 
 
@@ -470,7 +470,7 @@ InputPath=.\dynapk.ned
 ".\dynapk_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
 	<<tempfile.bat
 	@echo off
-	perl @OMNETPP_BIN_DIR@\msgc -s _m.cpp dynapk.ned
+	perl @OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp dynapk.ned
 <<
 
 
