msg subclassing fix

--- a/Makefile.in
+++ b/Makefile.in
@@ -36,7 +36,7 @@ components: libs progs samples tutorials
 
 LIBS=sim nedxml envir cmdenv tkenv
 PROGS=utils nedc gned plove
-SAMPLES=@OMNETPP_SAMPLES@
+SAMPLES=dyna dyna2 fddi fifo1 fifo2 hcube hist nim token ned demo
 
 #
 # Group targets. Note that utils has to be built BEFORE other libs and progs
