--- a/Makefile.vc
+++ b/Makefile.vc
@@ -56,6 +56,7 @@ SAMPLES=dyna fddi fifo1 fifo2 hcube hist nim token dyna2 topo demo
 libs: utils $(LIBS)
 progs: $(PROGS)
 samples: $(SAMPLES)
+docs: api nedxml-api manual
 
 
 #
@@ -161,10 +162,24 @@ thetutorial:
 	cd /d $(OMNETPP_TUTORIAL_DIR:/=\)\queues && $(MAKE) $(MOPTS) -f queues.mak
 
 
+#
+# Documentation
+#
+api:
+	cd /d $(OMNETPP_INCL_DIR:/=\) && $(MAKE) $(MOPTS) $(MAKEFILE) doc
+
+nedxml-api:
+	cd /d $(OMNETPP_SRC_DIR:/=\)/nedxml && $(MAKE) $(MOPTS) $(MAKEFILE) doc
+
+manual:
+	cd /d $(OMNETPP_DOC_DIR:/=\)/usman && $(MAKE) $(MOPTS) $(MAKEFILE)
+
+#
+# Tests
+#
 tests: check-env libs progs 
 	@echo ===== Running tests ====
-	@echo Error: Tests not (yet) supported on NT using MSVC; try Cygwin.
-        @exit 1
+        @cd /d $(OMNETPP_TEST_DIR:/=\) && call runtest.cmd
 
 #=====================================================================
 #
@@ -225,6 +240,7 @@ configtutorial:
 clean:
 	-for %%i in ( $(LIBS) $(PROGS) ) do \
 	    cd /d $(OMNETPP_SRC_DIR:/=\)\%%i && $(MAKE) $(MOPTS) $(MAKEFILE) clean
+	-del /q $(OMNETPP_BIN_DIR:/=\)\*.
 	-del /q $(OMNETPP_BIN_DIR:/=\)\*.exe
 	-del /q $(OMNETPP_BIN_DIR:/=\)\*.bat
 	-del /q $(OMNETPP_BIN_DIR:/=\)\opp_*.*
