--- a/src/nedxml/Makefile.vc
+++ b/src/nedxml/Makefile.vc
@@ -112,6 +112,9 @@ saxparser_libxml.obj : saxparser_libxml.cc
 saxparser_none.obj : saxparser_none.cc
         $(CXX) $(COPTS) /c /Tp saxparser_none.cc
 
+doc:
+	$(DOXYGEN) doxy.cfg
+
 depend:
         $(MAKEDEPEND) -I. -fMakefile.vc -- *.cc
 
