Run 2 fixed; Run 3 and Run 4 added

--- a/tutorial/queues/omnetpp.ini
+++ b/tutorial/queues/omnetpp.ini
@@ -1,8 +1,4 @@
 [General]
-# Comment out this line if you want to run the ring demo
-network = fifonet
-# Uncomment this line to run the ring
-#network = ring
 random-seed = 1
 ini-warnings = no
 # The name below is optional, defauls is omnetpp.sca
@@ -29,6 +25,9 @@ slowexec-delay = 300ms
 fifonet.gen.num_messages = 5000
 
 [Run 1]
+# tandem queues
+network = fifonet
+
 fifonet.num_buffers = 1
 fifonet.num_cells = 100
 fifonet.gen.ia_time = exponential(3)
@@ -38,12 +37,34 @@ fifonet.fifo[0].service_time = exponential(2)
 fifonet.fifo[*].service_time = exponential(2)
 
 [Run 2]
+# a closed network of rings
+network = ring
+
 # Please mind that the ring network does not contain an internal
 # stop criterion. You have to stop it yourself.
 ring.num_buffers = 3
 ring.num_cells = 100
 ring.fifo[*].num_init_jobs = 20;
 # Note the sequence in which the fifos get their service rate
+ring.fifo[0].service_time = exponential(3)
+ring.fifo[*].service_time = exponential(2)
+
+[Run 3]
+network = fifonet
+
+fifonet.num_buffers = 5
+fifonet.num_cells = 100
+fifonet.gen.ia_time = exponential(3)
+fifonet.fifo[*].num_init_jobs = 10;
+fifonet.fifo[0].service_time = exponential(2)
+fifonet.fifo[*].service_time = exponential(2)
+
+[Run 4]
+network = ring
+
+#ring.num_buffers = 3
+ring.num_cells = 100
+ring.fifo[*].num_init_jobs = 20;
 ring.fifo[0].service_time = exponential(3)
 ring.fifo[*].service_time = exponential(2)
 
