doxygen, docs target

--- a/Makefile.vc
+++ b/Makefile.vc
@@ -169,10 +169,10 @@ api:
 	cd /d $(OMNETPP_INCL_DIR:/=\) && $(MAKE) $(MOPTS) $(MAKEFILE) doc
 
 nedxml-api:
-	cd /d $(OMNETPP_SRC_DIR:/=\)/nedxml && $(MAKE) $(MOPTS) $(MAKEFILE) doc
+	cd /d $(OMNETPP_SRC_DIR:/=\)\nedxml && $(MAKE) $(MOPTS) $(MAKEFILE) doc
 
 manual:
-	cd /d $(OMNETPP_DOC_DIR:/=\)/usman && $(MAKE) $(MOPTS) $(MAKEFILE)
+	cd /d $(OMNETPP_DOC_DIR:/=\)\usman && $(MAKE) $(MOPTS) $(MAKEFILE)
 
 #
 # Tests
