--- a/samples/token/omnetpp.ini
+++ b/samples/token/omnetpp.ini
@@ -29,33 +29,24 @@ update-freq-express = 1000
 breakpoints-enabled = yes
 extra-stack=20000 ;20K, but 10K is probably enough
 
-[DisplayStrings]
-Computer.sink = "i=sink"
-Computer.gen =  "i=gen"
-Computer.mac =  "i=queue"
-
 [Parameters]
-token.num_messages = 1000000
+token.comp[*].gen.numMessages = 1000000
+token.comp[*].gen.messageLength = uniform(1,4500)
 
 [Run 1]
-# ask num_stations and ia_time parameters
+# well loaded ring (if run with numStations=5)
+token.comp[*].gen.interArrivalTime = truncnormal(0.023, 0.006)
 output-vector-file = token1.vec
 
 [Run 2]
-# well loaded ring
-token.num_stations = 5
-token.ia_time = truncnormal(0.020, 0.006)
+# definately overloaded ring
+token.numStations = 7
+token.comp[*].gen.interArrivalTime = truncnormal(0.015, 0.003)
 output-vector-file = token2.vec
 
 [Run 3]
-# definately overloaded ring
-token.num_stations = 5
-token.ia_time = truncnormal(0.015, 0.003)
-output-vector-file = token3.vec
-
-[Run 4]
 # relatively low traffic
-token.num_stations = 5
-token.ia_time = truncnormal(0.030, 0.010)
-output-vector-file = token4.vec
+token.numStations = 4
+token.comp[*].gen.interArrivalTime = truncnormal(0.030, 0.010)
+output-vector-file = token3.vec
 
