--- a/samples/token/token.dsp.in
+++ b/samples/token/token.dsp.in
@@ -139,7 +139,81 @@ LINK32=link.exe
 # Begin Group "Source Files"
 
 # PROP Default_Filter "cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
+# Begin Source File
 
+SOURCE=.\token.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\token.msg
+
+!IF  "$(CFG)" == "token - Win32 Debug Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc
+InputPath=.\token.msg
+InputName=token
+
+BuildCmds= \
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+
+"$(InputName)_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "token - Win32 Debug Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc
+InputPath=.\token.msg
+InputName=token
+
+BuildCmds= \
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+
+"$(InputName)_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "token - Win32 Release Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc
+InputPath=.\token.msg
+InputName=token
+
+BuildCmds= \
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+
+"$(InputName)_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "token - Win32 Release Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc
+InputPath=.\token.msg
+InputName=token
+
+BuildCmds= \
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+
+"$(InputName)_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+   $(BuildCmds)
+# End Custom Build
+
+!ENDIF 
+
+# End Source File
 # Begin Source File
 
 SOURCE=.\token.ned
@@ -193,11 +267,11 @@ InputName=token
 # End Source File
 # Begin Source File
 
-SOURCE=.\token_n.cpp
+SOURCE=.\token_m.cpp
 # End Source File
 # Begin Source File
 
-SOURCE=.\token.cpp
+SOURCE=.\token_n.cpp
 # End Source File
 # End Group
 # Begin Group "Header Files"
