--- a/samples/token/token.mak.in
+++ b/samples/token/token.mak.in
@@ -35,17 +35,20 @@ INTDIR=.\debug
 OutDir=.\.
 # End Custom Macros
 
-ALL : "$(OUTDIR)\token.exe"
+ALL : ".\token_m.h" ".\token_m.cpp" "$(OUTDIR)\token.exe"
 
 
 CLEAN :
-	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\token.obj"
+	-@erase "$(INTDIR)\token_m.obj"
+	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\vc60.idb"
 	-@erase "$(INTDIR)\vc60.pdb"
 	-@erase "$(OUTDIR)\token.exe"
 	-@erase "$(OUTDIR)\token.ilk"
 	-@erase "$(OUTDIR)\token.pdb"
+	-@erase "token_m.cpp"
+	-@erase "token_m.h"
 
 "$(OUTDIR)" :
     if not exist "$(OUTDIR)/$(NULL)" mkdir "$(OUTDIR)"
@@ -94,8 +97,9 @@ BSC32_SBRS= \
 LINK32=link.exe
 LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\token.pdb" /debug /machine:I386 /out:"$(OUTDIR)\token.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
-	"$(INTDIR)\token_n.obj" \
-	"$(INTDIR)\token.obj"
+	"$(INTDIR)\token.obj" \
+	"$(INTDIR)\token_m.obj" \
+	"$(INTDIR)\token_n.obj"
 
 "$(OUTDIR)\token.exe" : "$(OUTDIR)" $(DEF_FILE) $(LINK32_OBJS)
     $(LINK32) @<<
@@ -110,17 +114,20 @@ INTDIR=.\debug
 OutDir=.\.
 # End Custom Macros
 
-ALL : "$(OUTDIR)\token.exe"
+ALL : ".\token_m.h" ".\token_m.cpp" "$(OUTDIR)\token.exe"
 
 
 CLEAN :
-	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\token.obj"
+	-@erase "$(INTDIR)\token_m.obj"
+	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\vc60.idb"
 	-@erase "$(INTDIR)\vc60.pdb"
 	-@erase "$(OUTDIR)\token.exe"
 	-@erase "$(OUTDIR)\token.ilk"
 	-@erase "$(OUTDIR)\token.pdb"
+	-@erase "token_m.cpp"
+	-@erase "token_m.h"
 
 "$(OUTDIR)" :
     if not exist "$(OUTDIR)/$(NULL)" mkdir "$(OUTDIR)"
@@ -169,8 +176,9 @@ BSC32_SBRS= \
 LINK32=link.exe
 LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\token.pdb" /debug /machine:I386 /out:"$(OUTDIR)\token.exe" /pdbtype:sept /libpath:"@OMNETPP_LIB_DIR@"
 LINK32_OBJS= \
-	"$(INTDIR)\token_n.obj" \
-	"$(INTDIR)\token.obj"
+	"$(INTDIR)\token.obj" \
+	"$(INTDIR)\token_m.obj" \
+	"$(INTDIR)\token_n.obj"
 
 "$(OUTDIR)\token.exe" : "$(OUTDIR)" $(DEF_FILE) $(LINK32_OBJS)
     $(LINK32) @<<
@@ -185,14 +193,17 @@ INTDIR=.\release
 OutDir=.\.
 # End Custom Macros
 
-ALL : "$(OUTDIR)\token.exe"
+ALL : ".\token_m.h" ".\token_m.cpp" "$(OUTDIR)\token.exe"
 
 
 CLEAN :
-	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\token.obj"
+	-@erase "$(INTDIR)\token_m.obj"
+	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\vc60.idb"
 	-@erase "$(OUTDIR)\token.exe"
+	-@erase "token_m.cpp"
+	-@erase "token_m.h"
 
 "$(OUTDIR)" :
     if not exist "$(OUTDIR)/$(NULL)" mkdir "$(OUTDIR)"
@@ -241,8 +252,9 @@ BSC32_SBRS= \
 LINK32=link.exe
 LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\token.pdb" /machine:I386 /out:"$(OUTDIR)\token.exe" /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
-	"$(INTDIR)\token_n.obj" \
-	"$(INTDIR)\token.obj"
+	"$(INTDIR)\token.obj" \
+	"$(INTDIR)\token_m.obj" \
+	"$(INTDIR)\token_n.obj"
 
 "$(OUTDIR)\token.exe" : "$(OUTDIR)" $(DEF_FILE) $(LINK32_OBJS)
     $(LINK32) @<<
@@ -257,14 +269,17 @@ INTDIR=.\release
 OutDir=.\.
 # End Custom Macros
 
-ALL : "$(OUTDIR)\token.exe"
+ALL : ".\token_m.h" ".\token_m.cpp" "$(OUTDIR)\token.exe"
 
 
 CLEAN :
-	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\token.obj"
+	-@erase "$(INTDIR)\token_m.obj"
+	-@erase "$(INTDIR)\token_n.obj"
 	-@erase "$(INTDIR)\vc60.idb"
 	-@erase "$(OUTDIR)\token.exe"
+	-@erase "token_m.cpp"
+	-@erase "token_m.h"
 
 "$(OUTDIR)" :
     if not exist "$(OUTDIR)/$(NULL)" mkdir "$(OUTDIR)"
@@ -313,8 +328,9 @@ BSC32_SBRS= \
 LINK32=link.exe
 LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /incremental:no /pdb:"$(OUTDIR)\token.pdb" /machine:I386 /out:"$(OUTDIR)\token.exe" /libpath:"@OMNETPP_LIB_DIR@"
 LINK32_OBJS= \
-	"$(INTDIR)\token_n.obj" \
-	"$(INTDIR)\token.obj"
+	"$(INTDIR)\token.obj" \
+	"$(INTDIR)\token_m.obj" \
+	"$(INTDIR)\token_n.obj"
 
 "$(OUTDIR)\token.exe" : "$(OUTDIR)" $(DEF_FILE) $(LINK32_OBJS)
     $(LINK32) @<<
@@ -334,6 +350,62 @@ LINK32_OBJS= \
 
 
 !IF "$(CFG)" == "token - Win32 Debug Tkenv" || "$(CFG)" == "token - Win32 Debug Cmdenv" || "$(CFG)" == "token - Win32 Release Tkenv" || "$(CFG)" == "token - Win32 Release Cmdenv"
+SOURCE=.\token.cpp
+
+"$(INTDIR)\token.obj" : $(SOURCE) "$(INTDIR)"
+
+
+SOURCE=.\token.msg
+
+!IF  "$(CFG)" == "token - Win32 Debug Tkenv"
+
+InputPath=.\token.msg
+InputName=token
+
+".\token_m.cpp"	".\token_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	<<tempfile.bat 
+	@echo off 
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+<< 
+	
+
+!ELSEIF  "$(CFG)" == "token - Win32 Debug Cmdenv"
+
+InputPath=.\token.msg
+InputName=token
+
+".\token_m.cpp"	".\token_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	<<tempfile.bat 
+	@echo off 
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+<< 
+	
+
+!ELSEIF  "$(CFG)" == "token - Win32 Release Tkenv"
+
+InputPath=.\token.msg
+InputName=token
+
+".\token_m.cpp"	".\token_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	<<tempfile.bat 
+	@echo off 
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+<< 
+	
+
+!ELSEIF  "$(CFG)" == "token - Win32 Release Cmdenv"
+
+InputPath=.\token.msg
+InputName=token
+
+".\token_m.cpp"	".\token_m.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	<<tempfile.bat 
+	@echo off 
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+<< 
+	
+
+!ENDIF 
 
 SOURCE=.\token.ned
 
@@ -387,14 +459,14 @@ InputName=token
 
 !ENDIF
 
+SOURCE=.\token_m.cpp
+
+"$(INTDIR)\token_m.obj" : $(SOURCE) "$(INTDIR)"
+
+
 SOURCE=.\token_n.cpp
 
 "$(INTDIR)\token_n.obj" : $(SOURCE) "$(INTDIR)"
-
-
-SOURCE=.\token.cpp
-
-"$(INTDIR)\token.obj" : $(SOURCE) "$(INTDIR)"
 
 
 
