--- a/samples/token/.tkenvrc
+++ b/samples/token/.tkenvrc
@@ -1,9 +1,5 @@
-"token" "TokenRing" "2" "289x353+5+5"
-"token.comp[0]" "Computer" "2" "280x304+13+391"
-"token.comp[0].mac.local-objects.send-queue" "cQueue" "1" "379x227+324+3"
-"token.comp[0].sink.local-objects.transmission-time" "cOutVector" "2" "386x200+322+263"
-"token.comp[0].sink.local-objects.queuing-time" "cOutVector" "2" "388x187+323+503"
-"token.comp[2].sink.local-objects.transmission-time" "class cOutVector" "2" "386x331+575+53"
-"token.comp[1].sink" "class Sink" "1" "385x247+532+484"
-"token.comp[1]" "class Computer" "2" "301x261+170+428"
-"token" "class TokenRing" "2" "289x354+34+216"
+"token" "TokenRing" "2" "268x353+11+3"
+"token.comp[0]" "Computer" "2" "229x257+37+389"
+"token.comp[0].mac.class-members.Queueing time (sec)" "cOutVector" "2" "379x201+289+220"
+"token.comp[0].mac.class-members.sendQueue" "cQueue" "1" "379x186+289+5"
+"token.comp[4].sink.local-objects.End-to-End Delay histogram (K-split)" "cKSplit" "2" "309x210+289+450"
